@@ -28,6 +28,10 @@
       <licence tarname="mpc-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="mpc-1.0.3-1-mingw32-dev.tar.xz">
+          <requires eq="mingw32-libmpc-%-mingw32-dll-3.tar" />
+          <requires ge="mpfr-3.1.5-1-mingw32-dev.tar" />
+        </release>
         <release tarname="mpc-1.0.2-mingw32-dev.tar.xz">
           <requires eq="mingw32-libmpc-%-mingw32-dll-3.tar" />
           <requires ge="mpfr-3.1.2-1-mingw32-dev.tar" />
@@ -46,6 +50,9 @@
       </component>
 
       <component class="doc">
+        <release tarname="mpc-1.0.3-1-mingw32-doc.tar">
+          <download tarname="none" />
+        </release>
         <release tarname="mpc-1.0.2-mingw32-doc.tar.xz" />
         <release tarname="mpc-1.0.1-2-mingw32-doc.tar.lzma" />
         <release tarname="mpc-1.0.1-1-mingw32-doc.tar.lzma" />
@@ -53,16 +60,17 @@
       </component>
 
       <component class="info">
+        <release tarname="mpc-1.0.3-1-mingw32-info.tar.xz" />
         <release tarname="mpc-1.0.2-mingw32-info.tar.xz" />
       </component>
 
       <component class="lic">
+        <release tarname="mpc-1.0.3-1-mingw32-lic.tar.xz" />
         <release tarname="mpc-1.0.2-mingw32-lic.tar.xz" />
         <release tarname="mpc-1.0.1-2-mingw32-lic.tar.lzma" />
         <release tarname="mpc-1.0.1-1-mingw32-lic.tar.lzma" />
         <release tarname="mpc-0.8.1-1-mingw32-lic.tar.lzma" />
       </component>
-
     </package>
 
     <package name="mingw32-libmpc" alias="libmpc">
@@ -88,6 +96,10 @@
       <licence tarname="mpc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+        <release tarname="libmpc-1.0.3-1-mingw32-dll-3.tar.xz">
+          <requires ge="mingw32-libmpfr-3.1.5-mingw32-dll-4.tar" />
+          <requires ge="mingw32-libgmp-6.1.2-mingw32-dll-10.tar" />
+        </release>
         <release tarname="libmpc-1.0.2-mingw32-dll-3.tar.xz">
           <requires eq="mingw32-libmpfr-*-mingw32-dll-4.tar" />
           <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
